--- a/PhotoDrop/Drop.storyboard
+++ b/PhotoDrop/Drop.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sav-ME-bra">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sav-ME-bra">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -135,7 +135,7 @@
                         <outlet property="flashToggle" destination="Ilc-ck-Ouy" id="8Qy-Ca-BeH"/>
                         <outlet property="overlayView" destination="R3h-lt-2Ib" id="AjY-n2-aAb"/>
                         <outlet property="takePhotoButton" destination="lZv-X8-pl4" id="Ult-rt-5J8"/>
-                        <segue destination="8FB-P5-UuS" kind="show" identifier="toDropPreview" animates="NO" id="ab3-6t-R55"/>
+                        <segue destination="8FB-P5-UuS" kind="presentation" identifier="toDropPreview" modalTransitionStyle="crossDissolve" id="ab3-6t-R55"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fJZ-US-Dwn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -152,7 +152,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="back-button-white" width="54" height="54"/>
+        <image name="back-button-white" width="126" height="126"/>
         <image name="camera-rotate" width="126" height="126"/>
         <image name="flash-off" width="126" height="126"/>
         <image name="take-a-photo-button" width="94" height="94"/>
